--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="core\UnaryExpressionModel.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="fuzzy\And.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
