--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="fuzzy\And.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="fuzzy\AndMin.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
