Implementation du evaluate de OrMax

--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="fuzzy\OrPlus.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="fuzzy\OrMax.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
