--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj
@@ -70,6 +70,7 @@
     <ClInclude Include="fuzzy\AndMin.h" />
     <ClInclude Include="fuzzy\AndMult.h" />
     <ClInclude Include="fuzzy\Or.h" />
+    <ClInclude Include="fuzzy\OrMax.h" />
     <ClInclude Include="fuzzy\OrPlus.h" />
   </ItemGroup>
   <ItemGroup>
