--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj
@@ -66,6 +66,9 @@
     <ClInclude Include="core\UnaryExpression.h" />
     <ClInclude Include="core\UnaryExpressionModel.h" />
     <ClInclude Include="core\ValueModel.h" />
+    <ClInclude Include="fuzzy\Agg.h" />
+    <ClInclude Include="fuzzy\AggMax.h" />
+    <ClInclude Include="fuzzy\AggPlus.h" />
     <ClInclude Include="fuzzy\And.h" />
     <ClInclude Include="fuzzy\AndMin.h" />
     <ClInclude Include="fuzzy\AndMult.h" />
