--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
@@ -69,6 +69,18 @@
     <ClInclude Include="fuzzy\AggPlus.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="fuzzy\Not.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="fuzzy\NotMinus1.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="fuzzy\Is.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="fuzzy\IsTriangle.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
