--- a/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
+++ b/Fuzzy_Framework/Fuzzy_Framework.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClInclude Include="fuzzy\IsTriangle.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="fuzzy\IsTrapeze.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="core\Factory.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
